# rust-web-api

./: Cargo.toml  cargo.ps1  diesel-migrations.ps1  docker-compose.yml
migrations/2023-05-11-020118_create_rustaceans/: up.sql
migrations/2023-05-11-020122_create_crates/: up.sql
src/: main.rs  models.rs  repositories.rs  schema.rs
src/rocket_routes/: rustaceans.rs
